--- a/app/views/form_section/_subform.html.erb
+++ b/app/views/form_section/_subform.html.erb
@@ -76,9 +76,11 @@
   </div>
 
   <%# Add button %>
-  <div>
-    <a id="subform_<%= subform.name %>_add_button" class="green-button subform_add right" <%= disable_action_buttons %>><%= t('fields.add') %></a>
-  </div>
+  <% if subform.editable %>
+    <div>
+      <a id="subform_<%= subform.name %>_add_button" class="green-button subform_add right" <%= disable_action_buttons %>><%= t('fields.add') %></a>
+    </div>
+  <% end %>
   <% initial_subforms = subform_section[:initial_subforms] || 0 %>
   <% if initial_subforms > 0 && formObject.new_record? && !formObject.errors.any? && subform_section.shared_subform.blank? %>
     <% subform_section[:initial_subforms].times do %>
