--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -13,8 +13,10 @@
    end
 %>
 <% if number_of_subforms == 0 %>
-  <% unless subform.subform_section.is_summary_section %>
-    <div class="placeholder_text"><%= t('placeholders.subforms', :form => t(form_group_name == "Violations" ? "incident.violation.violation" : subform.name, :default => subform.display_name.singularize)) %></div>
+  <% if subform.editable %>
+    <% unless subform.subform_section.is_summary_section %>
+      <div class="placeholder_text"><%= t('placeholders.subforms', :form => t(form_group_name == "Violations" ? "incident.violation.violation" : subform.name, :default => subform.display_name.singularize)) %></div>
+    <% end %>
   <% end %>
 <% else %>
   <div class="row">
