--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -15,31 +15,35 @@
         <%= form_tag(url_for(:action => 'transition', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
           <%= hidden_field_tag "selected_records"%>
           <%= hidden_field_tag "transition_type", Transition::TYPE_TRANSFER%>
-          <label><%=I18n.t("transfers.type_label")%>
-            <%= select_tag("transition_role", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
-          </label>
-          <label><%=I18n.t("transfers.existing_user_label")%>
-            <%= select_tag("existing_user", options_for_select(@associated_users, ''), :include_blank => true) %>
-          </label>
-          <label><%=I18n.t("transfers.other_user_label")%>
-            <%= text_field_tag("other_user") %>
-          </label>
-          <label><%=I18n.t("transfers.other_user_agency_label")%>
-            <%= text_field_tag("other_user_agency") %>
-          </label>
-          <label><%=I18n.t("transfers.notes_label")%>
-            <%= text_area_tag("notes") %>
-          </label>
           <label><%=I18n.t("transfers.is_remote_label")%>
             <%= check_box_tag("is_remote", "true") %>
+          </label>
+          <div class="local_toggle">
+            <div class='local_user_flash hide'><p class='error'></p></div>
+            <label><%=I18n.t("transfers.existing_user_label")%>
+              <%= select_tag("existing_user", options_for_select(@associated_users, ''), :include_blank => true) %>
+            </label>
+          </div>
+          <div class="remote_toggle" style="display:none">
+            <label><%=I18n.t("transfers.type_label")%>
+              <%= select_tag("transition_role", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
+            </label>
+            <div class='remote_user_flash hide'><p class='error'></p></div>
+            <label><%=I18n.t("transfers.other_user_label")%>
+              <%= text_field_tag("other_user") %>
+            </label>
+            <label><%=I18n.t("transfers.other_user_agency_label")%>
+              <%= text_field_tag("other_user_agency") %>
+            </label>
+          </div>
+          <label><%=I18n.t("transfers.notes_label")%>
+            <%= text_area_tag("notes") %>
           </label>
           <div class="remote_toggle" style="display:none">
             <label><%=I18n.t("transfers.remote_primero_label")%>
               <%= check_box_tag("remote_primero", "true") %>
             </label>
-            <div class='flash hide'>
-              <p class='error'></p>
-            </div>
+            <div class='password_flash hide'><p class='error'></p></div>
             <label><%=I18n.t("encrypt.password_label")%>
               <%= password_field_tag("password") %>
             </label>
