combined transfer and referral button into one partial to reduce code duplication

--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -10,8 +10,8 @@
         #TODO - When that happens, routes will have to be added
       %>
       <% if model == Child %>
-        <%= render 'referrals/button' %>
-        <%= render 'transfers/button' %>
+        <%= render 'transitions/button', type: Transition::TYPE_REFERRAL %>
+        <%= render 'transitions/button', type: Transition::TYPE_TRANSFER %>
       <% end %>
     </ul>
   </li>
