--- a/app/views/transitions/_button.html.erb
+++ b/app/views/transitions/_button.html.erb
@@ -1,49 +1,60 @@
 <%
     model_class_name = controller.model_class.name.underscore.downcase
     model_name = I18n.t("forms.record_types.#{model_class_name}")
+    transition_type = type || "referral"
+    
+    if transition_type == "referral"
+      transition_role_options = @referral_roles.map {|r| [r.name, r.id]}
+    elsif transition_type == "transfer"
+      transition_role_options = @transfer_roles.map {|r| [r.name, r.id]}
+    else
+      transition_role_options = []
+    end
 %>
-<% if can?(:referral, controller.model_class) %>
+<% if can?(transition_type.to_sym(), controller.model_class) %>
 <li>
-  <a data-reveal-id="referral-modal" class=<%= (defined?(instance) ? "" : "referral_index_action") %> href="#">
-    <%= t("buttons.referral", model: model_name) %>
+  <a data-reveal-id=<%= "#{transition_type}-modal" %> class=<%= (defined?(instance) ? "" : "#{transition_type}_index_action") %> href="#">
+    <%= t("buttons.#{transition_type}", model: model_name) %>
   </a>
 
-  <div id="referral-modal" class="reveal-modal tiny" data-reveal>
+  <div id=<%= "#{transition_type}-modal" %> class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
-    <div class="referral_form_container row">
+    <div class=<%= "#{transition_type}_form_container row"%> >
       <div class="large-11">
         <%= form_tag(url_for(:action => 'transition', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
           <%= hidden_field_tag "selected_records"%>
-          <%= hidden_field_tag "transition_type", Transition::TYPE_REFERRAL%>
-          <label><%=I18n.t("referrals.is_remote_label")%>
+          <%= hidden_field_tag "transition_type", transition_type%>
+          <label><%=I18n.t("#{transition_type}.is_remote_label")%>
             <%= check_box_tag("is_remote", "true") %>
           </label>
           <div class="local_toggle">
             <div class='local_user_flash hide'><p class='error'></p></div>
-            <label><%=I18n.t("referrals.existing_user_label")%>
+            <label><%=I18n.t("#{transition_type}.existing_user_label")%>
               <%= select_tag("existing_user", options_for_select(@associated_users, ''), :include_blank => true) %>
             </label>
           </div>
           <div class="remote_toggle" style="display:none">
-            <label><%=I18n.t("referrals.type_label")%>
-              <%= select_tag("transition_role", options_for_select(@referral_roles.map {|r| [r.name, r.id]}, '')) %>
+            <label><%=I18n.t("#{transition_type}.type_label")%>
+              <%= select_tag("transition_role", options_for_select(transition_role_options, '')) %>
             </label>
             <div class='remote_user_flash hide'><p class='error'></p></div>
-            <label><%=I18n.t("referrals.other_user_label")%>
+            <label><%=I18n.t("#{transition_type}.other_user_label")%>
               <%= text_field_tag("other_user") %>
             </label>
-            <label><%=I18n.t("referrals.other_user_agency_label")%>
+            <label><%=I18n.t("#{transition_type}.other_user_agency_label")%>
               <%= text_field_tag("other_user_agency") %>
             </label>
           </div>
-          <label><%=I18n.t("referrals.service_label")%>
-            <%= select_tag("service", options_for_select(Lookup.values("Service Type", @lookups), ''), :include_blank => true) %>
-          </label>
-          <label><%=I18n.t("referrals.notes_label")%>
+          <% if transition_type == "referral" %>
+            <label><%=I18n.t("referral.service_label")%>
+              <%= select_tag("service", options_for_select(Lookup.values("Service Type", @lookups), ''), :include_blank => true) %>
+            </label>
+          <% end %>
+          <label><%=I18n.t("#{transition_type}.notes_label")%>
             <%= text_area_tag("notes") %>
           </label>
           <div class="remote_toggle" style="display:none">
-            <label><%=I18n.t("referrals.remote_primero_label")%>
+            <label><%=I18n.t("#{transition_type}.remote_primero_label")%>
               <%= check_box_tag("remote_primero", "true") %>
             </label>
             <div class='password_flash hide'><p class='error'></p></div>
