--- a/app/views/transitions/_button.html.erb
+++ b/app/views/transitions/_button.html.erb
@@ -1,6 +1,7 @@
 <%
     model_class_name = controller.model_class.name.underscore.downcase
     model_name = I18n.t("forms.record_types.#{model_class_name}")
+    module_users = @module_users || []
     transition_type = type || "referral"
     
     if transition_type == "referral"
@@ -30,7 +31,7 @@
           <div class="local_toggle">
             <div class='local_user_flash hide'><p class='error'></p></div>
             <label><%=I18n.t("#{transition_type}.existing_user_label")%>
-              <%= select_tag("existing_user", options_for_select(@module_users, ''), :include_blank => true) %>
+              <%= select_tag("existing_user", options_for_select(module_users, ''), :include_blank => true) %>
             </label>
           </div>
           <div class="remote_toggle" style="display:none">
