--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -113,21 +113,21 @@
         <ul class="field_types side-nav modal-side-nav">
           <% if @field.present? && @field.type.present? %>
             <% type_field = @field.type == 'date_range' ? 'date_range_field' : @field.type %>
-            <li class="current"><%= link_to t("fields.#{type_field}"), "javascript:void(0)", :id => "#{type_field}", :class => "field_links sel" %> </li>
+            <li class="current"><%= link_to t("fields.#{type_field}"),'', :id => "#{type_field}", :class => "field_links sel" %> </li>
           <% else %>
-            <li class="current"><%= link_to t("fields.text_field"), "javascript:void(0)", :id => "text_field", :class => "field_links sel" %> </li>
-            <li><%= link_to t("fields.text_area"), "javascript:void(0)", :id => "textarea", :class => "field_links" %></li>
-            <li><%= link_to t("fields.check_box"), "javascript:void(0)", :id => "check_boxes", :class => "field_links" %></li>
-            <li><%= link_to t("fields.tick_box"), "javascript:void(0)", :id => "tick_box", :class => "field_links" %></li>
-            <li><%= link_to t("fields.select_box"), "javascript:void(0)", :id => "select_box", :class => "field_links" %></li>
-            <li><%= link_to t("fields.radio_button"), "javascript:void(0)", :id => "radio_button", :class => "field_links" %></li>
-            <li><%= link_to t("fields.numeric_field"), "javascript:void(0)", :id => "numeric_field", :class => "field_links" %></li>
-            <li><%= link_to t("fields.tally_field"), "javascript:void(0)", :id => "tally_field", :class => "field_links" %></li>
-            <li><%= link_to t("fields.date_field"), "javascript:void(0)", :id => "date_field", :class => "field_links" %></li>
-            <li><%= link_to t("fields.date_range_field"), "javascript:void(0)", :id => "date_range", :class => "field_links" %></li>
-            <li><%= link_to t("fields.separator"), "javascript:void(0)", :id => "separator", :class => "field_links" %></li>
+            <li class="current"><%= link_to t("fields.text_field"),'', :id => "text_field", :class => "field_links sel" %> </li>
+            <li><%= link_to t("fields.text_area"),'', :id => "textarea", :class => "field_links" %></li>
+            <li><%= link_to t("fields.check_box"),'', :id => "check_boxes", :class => "field_links" %></li>
+            <li><%= link_to t("fields.tick_box"),'', :id => "tick_box", :class => "field_links" %></li>
+            <li><%= link_to t("fields.select_box"),'', :id => "select_box", :class => "field_links" %></li>
+            <li><%= link_to t("fields.radio_button"),'', :id => "radio_button", :class => "field_links" %></li>
+            <li><%= link_to t("fields.numeric_field"),'', :id => "numeric_field", :class => "field_links" %></li>
+            <li><%= link_to t("fields.tally_field"),'', :id => "tally_field", :class => "field_links" %></li>
+            <li><%= link_to t("fields.date_field"),'', :id => "date_field", :class => "field_links" %></li>
+            <li><%= link_to t("fields.date_range_field"),'', :id => "date_range", :class => "field_links" %></li>
+            <li><%= link_to t("fields.separator"), :id => "separator", :class => "field_links" %></li>
             <% unless @form_section.is_nested %>
-              <li><%= link_to t("fields.subform"), "javascript:void(0)", :id => "subform", :class => "field_links" %></li>
+              <li><%= link_to t("fields.subform"),'', :id => "subform", :class => "field_links" %></li>
             <% end %>
           <% end %>
         </ul>
