--- a/app/views/form_section/_check_boxes.html.erb
+++ b/app/views/form_section/_check_boxes.html.erb
@@ -15,7 +15,7 @@
     <% check_boxes.options.each do |option| %>
       <%checkbox_id = "#{check_boxes.form.name.dehumanize}_#{sanitize_to_id(name)}_#{option.option_name.dehumanize}"%>
       <%= check_box_tag name+"[]", option.option_name, (value||[]).include?(option.option_name), :id => checkbox_id,
-          :data => { :field_tags => field_tags } %>
+          :data => { :field_tags => field_tags }, :disabled => check_boxes.disabled %>
       <%= label_tag checkbox_id, option.option_name %>
       <br>
     <% end %>
