--- a/app/views/form_section/_field_display_basic.html.erb
+++ b/app/views/form_section/_field_display_basic.html.erb
@@ -9,7 +9,7 @@
       <%
         value = field_value_for_display formObject[field.name]
         if field.multi_select.present? and field.multi_select == true
-          value = field_value_for_multi_select formObject[field.name], field
+          value = field_value_for_multi_select formObject[field.name], field, formObject
         end
         value = I18n.t("cases.hidden_text_field_text") if formObject[:hidden_name] && field.hidden_text_field
       %>
