PRIMERO-1003: QA22: In IE10 only, on Photo & Audio clicking on left side of Select File button results in a blinking cursor and no pop-up window to select file

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -33,6 +33,11 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+input[type="file"] {
+  width:75% !important;
+}
+
+
 select:not([class^="ui-datepicker-"]), select:hover:not([class^="ui-datepicker-"]) {
   border: 1px solid $stroke_green_color;
   background: #fff url(image_path("select_carot.png")) no-repeat;
