--- a/app/views/form_section/_text_field.html.erb
+++ b/app/views/form_section/_text_field.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="medium-8 columns">
     <%= text_field_tag name, value, :disabled => disabled_field, :id => field_id, :editable => text_field.editable,
-        :data => { :field_tags => field_tags } %>
+        :data => { :field_tags => field_tags }, autocomplete: 'off' %>
     <%= link_to(hide_text_link_text, hide_text_link_text.dehumanize, :class => "hidden_text_field",
         :action => hide_text_link_action) if show_hide_text_link %>
     <% if text_field.hidden_text_field && formObject.new_record? %>
