--- a/app/views/record_shared/_flag_records.html.erb
+++ b/app/views/record_shared/_flag_records.html.erb
@@ -7,11 +7,11 @@
   <div class="row flag_records">
     <div class="medium-5 columns">
       <label for="<%=model.name.underscore.downcase%>_flag_message"><%=t("#{model.name.underscore.downcase}.flag_reason")%>:</label>
-      <input type="text" class="flag_message" value="" size="30" name="flag_message" id="<%=model.name.underscore.downcase%>_flag_message">
+      <input type="text" class="flag_message" value="" size="30" name="flag_message" id="<%=model.name.underscore.downcase%>_flag_message" autocomplete="off">
     </div>
     <div class="medium-5 columns">
       <label for="<%=model.name.underscore.downcase%>_flag_date"><%=t("#{model.name.underscore.downcase}.flag_reason_date")%>:</label>
-      <input type="text" class="form_date_field flag_date" size="12" name="flag_date" id="<%=model.name.underscore.downcase%>_flag_date">
+      <input type="text" class="form_date_field flag_date" size="12" name="flag_date" id="<%=model.name.underscore.downcase%>_flag_date" autocomplete="off">
     </div>
     <div class="medium-2 columns">
       <a class="flag btn green-button" style="margin-top:1.3rem"
