--- a/app/views/contact_information/edit.html.erb
+++ b/app/views/contact_information/edit.html.erb
@@ -1,44 +1,102 @@
-<h1><%= I18n.t("contact.info_label") %></h1>
+<% content_for :breadcrumbs do %>
+  <%= I18n.t("contact.info_label") %>
+<% end %>
 
-<div class="page-content-new">
-  <div class="side-tab-content full_width">
-    <%= form_for @contact_information, :url => contact_information_path(@contact_information.id), :html => {:class=> 'default-form', :autocomplete => "off"} do |f| %>
-      <fieldset>
+<% content_for :record_sub_nav do %>
+  <%= render_controls(@contact_information) %>
+<% end %>
 
-        <p>
-          <%= f.label :name, t("contact.field.name"), :class => "key" %>
-          <%= f.text_field :name %>
-        </p>
-        <p>
-          <%= f.label :organization, t("contact.field.organization"), :class => "key" %>
-          <%= f.text_field :organization %>
-        </p>
-        <p>
-          <%= f.label :position, t("contact.field.position"), :class => "key" %>
-          <%= f.text_field :position %>
-        </p>
-        <p>
-          <%= f.label :phone, t("contact.field.phone"), :class => "key" %>
-          <%= f.text_field:phone %>
-        </p>
-        <p>
-          <%= f.label :email, t("contact.field.email"), :class => "key" %>
-          <%= f.text_field :email %>
-        </p>
-        <p>
-          <%= f.label :location, t("contact.field.location"), :class => "key" %>
-          <%= f.text_area :location %>
-        </p>
-        <p>
-          <%= f.label :other_information, t("contact.field.other_information"), :class => "key" %>
-          <%= f.text_area :other_information %>
-        </p>
-      </fieldset>
-
-      <div class="btn_panel">
-        <%= link_to t("buttons.back"), admin_path %>
-        <%= submit_button(t("buttons.save")) %>
+<div class="page-content-new row collapse" data-equalizer>
+  <div class="medium-4 large-4 columns close-side-tab side-tab-container">
+    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'contact_information'} %>
+  </div>
+  <div class="medium-8 large-8 columns side-tab-content-container">
+    <div class="side-tab-content" data-equalizer-watch>
+      <div class="row">
+        <div class="large-12 columns">
+          <%= form_for @contact_information, :url => contact_information_path(@contact_information.id), :html => {:class=> 'default-form', :autocomplete => "off"} do |f| %>
+            <fieldset class="no-border">
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :name, t("contact.field.name"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_field :name %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :organization, t("contact.field.organization"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_field :organization %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :position, t("contact.field.position"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_field :position %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :phone, t("contact.field.phone"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_field:phone %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :email, t("contact.field.email"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_field :email %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :location, t("contact.field.location"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_area :location %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <span class="tool-tip-label">
+                    <%= f.label :other_information, t("contact.field.other_information"), :class => "key inline" %>
+                  </span>
+                </div>
+                <div class="medium-8 columns">
+                  <%= f.text_area :other_information %>
+                </div>
+                <div class="medium-1 columns"> </div>
+              </div>
+            </fieldset>
+          <% end %>
+        </div>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
