--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -1,5 +1,6 @@
  <div class="side-tab" data-equalizer-watch>
   <div class="side-nav-container">
+    <div class="scrolling_indicator up"><%= t('messages.scroll_up') %></div>
     <ul class="side-nav">
       <%# TODO: We are hiding the user options for the time being. %>
       <li class=<%= (highlight_page == 'users' ? 'current' : '') %>><%= link_to I18n.t("users.label"), users_path if can?(:index, User) && can?(:index, Role)%></li>
@@ -17,6 +18,9 @@
         <%= link_to t("primero_programs.label"), primero_programs_path if can?(:index, PrimeroProgram) %></li>
       <li class=<%= (highlight_page == 'primero_modules' ? 'current' : '') %>>
         <%= link_to t("primero_modules.label"), primero_modules_path if can?(:index, PrimeroModule) %></li>
+      <li class=<%= (highlight_page == 'contact_information' ? 'current' : '') %>>
+        <%= link_to t("contact.info_label"), edit_contact_information_path("administrator") if can?(:edit, ContactInformation) %></li>
     </ul>
+    <div class="scrolling_indicator down"><%= t('messages.scroll_down') %></div>
   </div>
  </div>
