Fixed overflowing lookups

--- a/app/views/lookups/edit.html.erb
+++ b/app/views/lookups/edit.html.erb
@@ -2,10 +2,10 @@
   <%= t "lookup.edit" %>
 <% end %>
 
-<div class="page-content-new row collapse" data-equalizer>
+<div class="page-content-new row collapse">
   <%= render :partial => 'form_section/sidebar', :locals => {:highlight_page => 'lookups'} %>
   <div class="large-8 medium-8 columns side-tab-content-container">
-    <div class="side-tab-content" data-equalizer-watch>
+    <div class="side-tab-content">
       <%= render 'lookups/form' %>
     </div>
   </div>
