--- a/app/views/agencies/_editable.html.erb
+++ b/app/views/agencies/_editable.html.erb
@@ -1,3 +1,4 @@
 <%= resource_edit_field(object, 'name', 'agencies.name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'description', 'text_field') %>
 <%= resource_edit_field(object, 'logo', 'agencies.logo', 'file_field') %>
+<%= resource_edit_field(object, 'logo_enabled', 'agencies.logo_enabled', 'check_box') %>
