--- a/app/views/configuration_bundle/_export_button.html.erb
+++ b/app/views/configuration_bundle/_export_button.html.erb
@@ -1,3 +1,3 @@
-<a data-reveal-id="password-prompt-dialog" href="<%= url_for(:action => 'export_bundle', :controller => 'configuration_bundle')%>" class="btn green-button password-prompt">
+<a data-reveal-id="password-prompt-dialog" href="<%= url_for(:action => 'export_bundle', :controller => 'configuration_bundle')%>" password-prompt">
   <%= t("buttons.bundle_export") %>
 </a>
