--- a/app/views/configuration_bundle/_import_button.html.erb
+++ b/app/views/configuration_bundle/_import_button.html.erb
@@ -1,4 +1,4 @@
-<a data-reveal-id="import-bundle-modal" href="#" class="btn green-button">
+<a data-reveal-id="import-bundle-modal" href="#">
   <%= t("buttons.bundle_import") %>
 </a>
 
