--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,17 @@
     });
 </script>
 
+<% content_for :record_sub_nav_controls do %>
+  <% if can? :create,User %>
+      <%= link_to content_tag(:span, t("users.create"), :class => 'create_user'), new_user_path, :class => 'btn green-button' %>
+  <% end %>
+
+  <%= render partial: 'settings_actions', locals: {model: User} %>
+  <%#= render partial: 'record_shared/actions', locals: {model: User} %>
+  <%#= render :partial => 'configuration_bundle/export_button' %>
+  <%#= render :partial => 'configuration_bundle/import_button' %>
+<% end %>
+
 <% content_for :breadcrumbs do %>
   <%= t("users.manage") %>
 <% end %>
