Added error message to reports

--- a/app/views/shared_configuration_resource/_edit.html.erb
+++ b/app/views/shared_configuration_resource/_edit.html.erb
@@ -26,19 +26,19 @@
   <div class="large-8 medium-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
       <div class="row">
-          <div class="large-12 columns">
-	     <%= form_for object, html: {class: 'default-form', :multipart => true, :autocomplete => "off"} do |f| %>
-                <div class="clearfix"></div>
-                <%= f.error_messages :header_tag => :h3 %>
-                <div class="clearfix"></div>
-                <div class="mandate_panel"><span>*</span> <%= t("mandatory_field")%></div>
-                <div class="clearfix"></div>
-                <fieldset class="no-border">
-                  <%= render partial: "#{object_name_plural}/editable", locals: {object: object, form_builder: f} %>
-                </fieldset>
-              <% end %>
-            </div>
+        <div class="large-12 columns">
+          <%= form_for object, html: {class: 'default-form', :multipart => true, :autocomplete => "off"} do |f| %>
+            <div class="clearfix"></div>
+            <fieldset class="no-border"><%= f.error_messages :header_tag => :h2 %></fieldset>
+            <div class="clearfix"></div>
+            <div class="mandate_panel"><span>*</span> <%= t("mandatory_field")%></div>
+            <div class="clearfix"></div>
+            <fieldset class="no-border">
+              <%= render partial: "#{object_name_plural}/editable", locals: {object: object, form_builder: f} %>
+            </fieldset>
+          <% end %>
         </div>
+      </div>
     </div>
   </div>
 </div>
