--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -92,5 +92,5 @@
 
 <% content_for :record_sub_nav do %>
   <!--TODO: After we got the user object in the session replace the DB query with User object-->
-  <%= render_controls(@role) %>
+  <%= render_controls(@role, 'roles') %>
 <% end %>
