--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -174,6 +174,10 @@ hr {
   display: none
 }
 
+.contact_and_information {
+  padding: 20px;
+}
+
 table.dataTable {
   thead tr th.select_record,
   tbody tr td.select_record {
