--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -101,7 +101,9 @@
       <div class="medium-8 columns">
         <%= f.select :organization, Agency.available_agency_names, { include_blank: t('agencies.select_prompt') } %>
       </div>
-      <div class="medium-1 columns"> </div>
+      <div class="medium-1 columns">
+        <span class="required">*</span>
+      </div>
     </div>
 
     <%= resource_edit_field @user, 'position', 'position', 'text_field' %>
@@ -117,7 +119,7 @@
           <div class="medium-8 columns">
             <%= f.check_box :disabled, {}, "true", "false" %>
           </div>
-          <div class="medium-1 columns"> </div>
+          <div class="medium-1 columns"></div>
         </div>
     <% end %>
 
@@ -127,7 +129,7 @@
 
     <% content_for :record_sub_nav do %>
     <!--TODO: After we got the user object in the session replace the DB query with User object-->
-      <%= render_controls(@user) %>
+      <%= render_controls(@user, 'users') %>
       <% if false %>
       <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
           <%= icon('clock-o') %>
