--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -46,17 +46,19 @@
                 <%= f.text_area "description_#{I18n.default_locale}", :id => "form_section_description" %>
               </div>
             </div>
-            <div class="row">
-              <div class="medium-3 columns">
-                <%= f.label :form_group_name, t("form_section.form_group_name", :locale => I18n.default_locale), :class => 'key inline' %>
+            <% unless @form_section.is_nested %>
+              <div class="row">
+                <div class="medium-3 columns">
+                  <%= f.label :form_group_name, t("form_section.form_group_name", :locale => I18n.default_locale), :class => 'key inline' %>
+                </div>
+                <div class="medium-9 columns">
+                  <%= f.select "form_group_name", options_for_select(@list_form_group_names, @form_section.form_group_name || ''), {},
+                      required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
+                      class: "chosen-select-or-new", id: "form_section_form_group_name" %>
+                  <small class="error"><%= t('form_section.required_field', field: t("form_section.form_group_name", :locale => I18n.default_locale)) %></small>
+                </div>
               </div>
-              <div class="medium-9 columns">
-                <%= f.select "form_group_name", options_for_select(@list_form_group_names, @form_section.form_group_name || ''), {},
-                    required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
-                    class: "chosen-select-or-new", id: "form_section_form_group_name" %>
-                <small class="error"><%= t('form_section.required_field', field: t("form_section.form_group_name", :locale => I18n.default_locale)) %></small>
-              </div>
-            </div>
+            <% end %>
           </fieldset>
         </div>
       </div>
