--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -6,6 +6,7 @@
         <%= render 'imports/button' %>
       <% end %>
       <%= render 'exports/button', locals: { model: model } %>
+      <%= render 'exports/custom_exports' %>
       <%
         #TODO - For now, only implementing transfer and referral for Cases
         #TODO - At some point, it will be available for other record types
