--- a/app/views/incidents/_show_incident_toolbar.html.erb
+++ b/app/views/incidents/_show_incident_toolbar.html.erb
@@ -11,6 +11,7 @@
     <%= link_to content_tag(:span, t("actions.button")), '#', class: 'btn green-button action_btn' %>
     <ul>
         <%= render partial: 'exports/button', locals: {model: Incident, instance: @incident} %>
+        <%= render partial: 'exports/custom_exports', locals: {model: Incident} %>
         <% if can? :edit, @incident %>
             <%= render partial: 'record_shared/enable_disable_record', locals: {model: Incident, instance: @incident} %>
         <% end %>
