--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -228,6 +228,14 @@ table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
   width: 688px;
 }
 
+.reveal-modal {
+  background: $desat_green_color;
+
+  .close-reveal-modal {
+    color: $stroke_green_color;
+  }
+}
+
 .loading-screen {
   display: none;
 
