--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -1,22 +1,22 @@
 <li>
   <%= link_to t('exports.custom_exports.label'), '#', data: {"reveal-id" => 'custom-exports'} %>
-  <div id="custom-exports" class="reveal-modal large"
+  <div id="custom-exports" class="reveal-modal tiny"
       data-reveal data-record-type="<%= controller.model_class == Child ? 'case' : controller.model_class.to_s.underscore %>"
       data-module-id="<%= @record.module_id if @record.present? %>">
-    <h4><%= t('exports.custom_exports.label') %></h4>
+    <h5><%= t('exports.custom_exports.label') %></h5>
     <form id="custom_export_form">
       <div class="row">
-        <div class="large-6 columns">
+        <div class="large-12 columns modal-content">
           <fieldset>
             <div class="row">
-              <div class="medium-6 columns">
+              <div class="medium-12 columns">
                 <label for="format"><%= t('exports.custom_exports.format_label') %></label>
                 <input type="radio" name="format" value="forms"/>
                 <label form="format"><%= t('exports.custom_exports.form_label') %></label>
                 <input type="radio" name="format" value="fields"/>
                 <label for="format"><%= t('exports.custom_exports.field_label') %></label>
               </div>
-              <div class="medium-6 columns">
+              <div class="medium-12 columns">
                 <label for="module"><%= t('exports.custom_exports.select_module') %></label>
                 <select name="module">
                   <option value="" disabled selected><%= t('exports.custom_exports.module_placeholder') %></option>
@@ -45,9 +45,7 @@
             <label for="fields"><%= t('exports.custom_exports.fields') %></label>
             <select name="fields" multiple></select>
           </fieldset>
-        </div>
-        <div class="large-6 columns">
-          <div>
+          <div id="password-prompt">
             <div class="flash hide">
               <p class="error"></p>
             </div>
@@ -56,11 +54,10 @@
             <small><%= t('encrypt.password_extra_info') %></small>
             <label id="export-file-name-label" for="export-file-name-field"><%= t('encrypt.file_name') %></label>
             <input type="text" id="export-file-name-field">
-
-            <fieldset class="no-border">
-              <button class="btn green-button right"><%= t('exports.custom_export.export_submit') %></button>
-            </fieldset>
           </div>
+          <fieldset class="no-border">
+            <button class="btn green-button right"><%= t('exports.custom_export.export_submit') %></button>
+          </fieldset>
         </div>
       </div>
     </form>
