PRIMERO-1119: Added exporting of forms individual fields and permission for custom export

--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -1,3 +1,4 @@
+<% if can?(:export_custom, controller.model_class) %>
 <li>
   <%= link_to t('exports.custom_exports.label'), '#', data: {"reveal-id" => 'custom-exports'} %>
   <div id="custom-exports" class="reveal-modal tiny"
@@ -66,3 +67,4 @@
     <a class="close-reveal-modal">&#215;</a>
   </div>
 </li>
+<% end %>
