Removing link to custom exports in incidents and only allowing manager to view custom exports

--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -1,4 +1,4 @@
-<% if can?(:export_custom, controller.model_class) %>
+<% if can?(:export_custom, controller.model_class) && controller.model_class != Incident %>
 <li>
   <%= link_to t('exports.custom_exports.label'), '#', data: {"reveal-id" => 'custom-exports'} %>
   <div id="custom-exports" class="reveal-modal tiny"
