clear out inputs when clicking between form field types

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -137,7 +137,7 @@
     <div class="medium-9 columns side-tab-content-container">
       <div class="side-tab-content">
         <div class="row">
-          <div class="medium-12 columns">
+          <div class="medium-12 columns field_panel">
             <div class="space"></div>
             <% @field ||= Field.new(:type => 'text_field') %>
             <fieldset class="no-border">
