Removed list bullet to match other error messages

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -234,7 +234,7 @@ fieldset {
       background: #FFD8D8 !important;
     }
 
-    li.error-item {
+    li {
       list-style: none;
 
       span {
