Primero-1126: Added functionality to delete reports

--- a/app/views/reports/_summary_row.html.erb
+++ b/app/views/reports/_summary_row.html.erb
@@ -6,4 +6,9 @@
     <%= link_to record.name, report_path(record), class: 'id_link' %>
   </td>
   <td><%= record.description %></td>
+  <td>
+    <% if can?(:destroy, Report) %>
+        <%= link_to t("reports.actions.delete"), record, data: {confirm: t("reports.messages.confirmation")}, method: :delete %>
+    <% end %>
+  </td>
 </tr>
