Primero-1129: change custom exports submit export

--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -66,7 +66,7 @@
           </div>
         </div>
         <fieldset class="no-border">
-          <button id="submit_export" class="btn green-button right"><%= t('exports.custom_export.export_submit') %></button>
+          <button id="submit_export" class="btn green-button right"><%= t('exports.custom_exports.submit') %></button>
         </fieldset>
       </div>
     </form>
