--- a/cookbook/templates/default/nginx_couch.erb
+++ b/cookbook/templates/default/nginx_couch.erb
@@ -9,6 +9,12 @@ server {
   access_log <%= @log_dir %>/nginx_server.log;
   error_log <%= @log_dir %>/nginx_error.log error;
 
+  limit_req_zone $binary_remote_addr zone=couch_login_limit:10m rate=1r/s;
+
+  location /_session/ {
+    limit_req zone=couch_login_limit burst=5;
+  }
+
   location / {
     proxy_pass http://localhost:5984;
   }
